# campofrio-mvp-backend

./: .dockerignore  Dockerfile  Dockerfile.windows  README.md  azure.env.template  docker-compose.yml  main.py  pyproject.toml
src/application/: ChatWithAgentUseCase.py  CreateNewThreadUseCase.py  UseCase.py
src/domain/exceptions/: AgentCreationException.py  ThreadCreationException.py
src/domain/models/: ChatRequest.py  ChatResponse.py
src/domain/prompts/: AgentSystemPrompt.py
src/domain/providers/: LLMProvider.py
src/domain/services/: ChatService.py
src/infrastructure/azure/: AzureFoundryAgentProvider.py  AzureFoundryAgentService.py  AzureFoundryLlmProvider.py
src/infrastructure/fabric/: FabricAgentService.py  FabricLlmProvider.py
src/infrastructure/repositories/prompts/: AgentSystemPrompt.py
src/infrastructure/rest/server/: chat_server.py
src/infrastructure/sql/: SqlExtractor.py
