[project]
name = "camp-chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.23.1",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "camp-chat-backend",
]
